[package]
name = "rudder-package"
version = "0.0.0-dev"
description = "Plugin manager for Rudder"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

build = "build.rs"

[dependencies]
anyhow = "1.0.75"
ar = "0.9.0"
base16ct = { version = "1", features = ["alloc"] }
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.10"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "serde"] }
lzma-rs = "0.3.0"
quick-xml = "0.39.0"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "native-tls"] }
regex = "1.10.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.107"
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.8.0"
# Compile dev and release with trace logs enabled
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
which = "8.0.0"
flate2 = "1.0.28"
cli-table = "0.5.0"
sequoia-openpgp = { version = "2.0.0", optional = true }
spinners = "4.1.1"
rudder_cli = { path = "../../../policies/rudder-cli" }
itertools = "0.14"

[build-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.10"

[dev-dependencies]
rstest = "0.26.0"
assert-json-diff = "2.0.2"
dir-diff = "0.3.2"
pretty_assertions = "1.4.0"

[features]
sequoia = ["sequoia-openpgp"]
